--- a/gestionproyectos/src/main/resources/templates/solicitud_de_cambio.tex
+++ b/gestionproyectos/src/main/resources/templates/solicitud_de_cambio.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[table]{xcolor} % Para colorear celdas
-\usepackage{tabularx} % Para tablas ajustables al ancho
+\usepackage{tabularx,lipsum} % Para tablas ajustables al ancho
 \usepackage{geometry} % Para ajustar márgenes
 \geometry{margin=1.5cm} % Márgenes pequeños
 
@@ -10,16 +10,18 @@
 {\huge\textbf{Solicitud de Cambio}}\\[2cm]
 \end{center}
 
-\vspace{0.5cm}
-
+\newcommand{\wrappingmulticolumn}[3] 
+    {\multicolumn{#1}
+                 {|>{\hsize=\dimexpr#1\hsize+\tabcolsep * (2 * (#1 - 1) )+\arrayrulewidth* (#1 - 2)\relax}#2|}
+                 {#3}}
 \renewcommand{\arraystretch}{1.5} % Espacio entre filas
 \rowcolors{2}{gray!10}{white} % Colores alternos para filas
 
 \noindent
 \begin{tabularx}{\textwidth}{| X | X | X | X |}
 \hline
-\multicolumn{1}{|X|}{\cellcolor{gray!40}\textbf{NOMBRE DEL PROYECTO}} & \multicolumn{3}{|c|}{{{nombreProyecto}}} \\ \hline
-\cellcolor{gray!40}\textbf{ID PROYECTO}  & {{idProyecto}} & \cellcolor{gray!40}\textbf{NÚMERO DE SOLICITUD DE CAMBIO} & {{numeroSolicitud}} \\ \hline
+\multicolumn{1}{|X|}{\centering\cellcolor{gray!40}\textbf{NOMBRE DEL PROYECTO}} & \wrappingmulticolumn{3}{X}{{{proyectName}}} \\ \hline
+\centering\cellcolor{gray!40}\textbf{ID PROYECTO}  & {{idProject}} & \centering\cellcolor{gray!40}\textbf{NÚMERO DE SOLICITUD DE CAMBIO} & {{requestNumber}} \\ \hline
 \end{tabularx}
 
 \vspace{0.5cm}
@@ -27,11 +29,11 @@
 \noindent
 \begin{tabularx}{\textwidth}{| X | X | X | X |}
 \hline
-\multicolumn{4}{|c|}{\cellcolor{blue!30}\textbf{SOLICITUD DE CAMBIO}} \\ \hline
-\cellcolor{gray!40}\textbf{NOMBRE DEL SOLICITANTE} & {{solicitante}} & \cellcolor{gray!40}\textbf{FECHA DE SOLICITUD} & {{fechaSolicitud}} \\ \hline
-\cellcolor{gray!40}\textbf{CONTACTO DEL SOLICITANTE} & {{contactoSolicitante}} & \cellcolor{gray!40}\textbf{PRIORIDAD} & {{prioridad}} \\ \hline
-\multicolumn{1}{|X|}{\cellcolor{gray!40}\textbf{ÁRTICULO A CAMBIAR}} & \multicolumn{3}{|c|}{{{articuloCambiar}}} \\ \hline
-\multicolumn{1}{|X|}{\cellcolor{gray!40}\textbf{DESCRIPCIÓN DEL CAMBIO}} & \multicolumn{3}{|c|}{{{descripcionCambio}}} \\ \hline
+\multicolumn{4}{|c|}{\centering\cellcolor{blue!30}\textbf{SOLICITUD DE CAMBIO}} \\ \hline
+\centering\cellcolor{gray!40}\textbf{NOMBRE DEL SOLICITANTE} & {{applicant}} & \centering\cellcolor{gray!40}\textbf{FECHA DE SOLICITUD} & {{requestDate}} \\ \hline
+\centering\cellcolor{gray!40}\textbf{CONTACTO DEL SOLICITANTE} & {{applicantContact}} & \centering\cellcolor{gray!40}\textbf{PRIORIDAD} & {{priority}} \\ \hline
+\multicolumn{1}{|X|}{\centering\cellcolor{gray!40}\textbf{ARTÍCULO A CAMBIAR}} & \wrappingmulticolumn{3}{X}{{{changeArticle}}} \\ \hline
+\multicolumn{1}{|X|}{\centering\cellcolor{gray!40}\textbf{DESCRIPCIÓN DEL CAMBIO}} & \wrappingmulticolumn{3}{X}{{{changeDescription}}} \\ \hline
 \end{tabularx}
 
 \end{document}
