--- a/gestionproyectos/src/main/resources/templates/registro_de_supuestos.tex
+++ b/gestionproyectos/src/main/resources/templates/registro_de_supuestos.tex
@@ -1,88 +1,99 @@
-\documentclass{article}
-\usepackage[table]{xcolor} % Para colorear celdas
-\usepackage{tabularx,lipsum}
-\usepackage{geometry} % Para ajustar márgenes
-\geometry{margin=1.5cm} % Márgenes pequeños
+\documentclass[12pt]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
+\usepackage[table]{xcolor}
+\usepackage{tabularx}
+\usepackage{array}
+\usepackage{geometry}
+\geometry{margin=1.5cm}
+
+% Definir nuevos tipos de columnas
+\newcolumntype{Y}{>{\raggedright\arraybackslash}X}
+\newcolumntype{L}{>{\raggedright\arraybackslash\hsize=0.8\hsize}X}
+\newcolumntype{R}{>{\raggedright\arraybackslash\hsize=1.2\hsize}X}
 
 \begin{document}
 
-\begin{center}
-{\huge\textbf{Registro de Supuestos}}\\[2cm]
-\end{center}
+    \begin{center}
+    {\huge\textbf{Registro de Supuestos}}\\[1cm]
+    \end{center}
 
-\vspace{0.5cm}
+    \renewcommand{\arraystretch}{1.5}
 
-\newcommand{\wrappingmulticolumn}[3] 
-    {\multicolumn{#1}
-                 {|>{\hsize=\dimexpr#1\hsize+\tabcolsep * (2 * (#1 - 1) )+\arrayrulewidth* (#1 - 2)\relax}#2|}
-                 {#3}}
-\renewcommand{\arraystretch}{1.5} % Espacio entre filas
-\rowcolors{2}{gray!10}{white} % Colores alternos para filas
+% Primera tabla - Información del proyecto
+    \noindent
+    \begin{tabularx}{\textwidth}{|>{\columncolor{gray!40}}c|c|>{\columncolor{gray!40}}c|c|}
+        \hline
+        \rowcolor{gray!40}\multicolumn{2}{|>{\columncolor{gray!40}}l|}{\textbf{NOMBRE DEL PROYECTO}} &
+        \textbf{ID DEL PROYECTO} & \textbf{FECHA DEL PROYECTO} \\
+        \hline
+        \rowcolor{white}\multicolumn{2}{|l|}{{{proyectName}}} & {{idProyect}} & {{elaborationDate}} \\
+        \hline
+        \multicolumn{4}{|>{\columncolor{gray!40}}c|}{\textbf{OBJETIVOS DEL PROYECTO}} \\
+        \hline
+        \multicolumn{4}{|p{\dimexpr\textwidth-2\tabcolsep}|}{{{proyectObjectives}}} \\
+        \hline
+    \end{tabularx}
 
-\noindent
-\begin{tabularx}{\textwidth}{ X  X  X  X }
-\hline
-\multicolumn{2}{|c|}{\cellcolor{gray!40}\textbf{NOMBRE DEL PROYECTO}} & \multicolumn{1}{|X|}{\cellcolor{gray!40}\textbf{ID DEL PROYECTO}} & \multicolumn{1}{|X|}{\cellcolor{gray!40}\textbf{FECHA DEL PROYECTO}} \\ \hline
-\multicolumn{2}{|c|}{{{proyectName}}} & \multicolumn{1}{|X|}{{{idProyect}}} & \multicolumn{1}{|X|}{{{elaborationDate}}} \\ \hline
-\wrappingmulticolumn{4}{X}{\centering\cellcolor{gray!40}\textbf{OBJETIVOS DEL PROYECTO}} \\ \hline
-\wrappingmulticolumn{4}{X}{{proyectObjectives}} \\ \hline
-\rowcolor{white} & & &\\ 
-\end{tabularx}
+    \vspace{0.5cm}
 
-\vspace{0.5cm}
+    \section{Salidas del Proyecto}
+    {{proyectOutputs}}
 
-\section{Salidas del Proyecto}
-{{proyectOutputs}}
+    \section{Listado de Tareas del Proyecto}
+    {{proyectTasks}}
 
-\section{Listado de Tareas del Proyecto}
-{{proyectTasks}}
+    \section{Fuera del Alcance}
+    \noindent
+    \begin{tabularx}{\textwidth}{|>{\columncolor{gray!40}}L|R|}
+        \hline
+        \textbf{ESTE PROYECTO NO ALCANZARÁ O INCLUIRÁ LO SIGUIENTE} & {{proyectOutOfScope}} \\
+        \hline
+    \end{tabularx}
 
-\section{Fuera del Alcance}
-\noindent
-\begin{tabularx}{\textwidth}{ X X X X X X }
-\hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}ESTE PROYECTO \textbf{NO ALCANSARA O INCLUIRA} LO SIGUIENTE} &
-\wrappingmulticolumn{5}{X}{{proyectOutOfScope}} \\ \hline
-\end{tabularx}
+    \section{Supuestos del Proyecto}
+    {{proyectAssumptions}}
 
-\section{Supuestos del Proyecto}
-{{proyectAssumptions}}
+    \section{Restricciones del Proyecto}
+    \noindent
+    \begin{tabularx}{\textwidth}{|>{\columncolor{gray!40}}L|R|}
+        \hline
+        \textbf{FECHA DE INICIO} & {{proyectStartDate}} \\
+        \hline
+        \textbf{FECHA DEL KICK OFF} & {{kickOffDate}} \\
+        \hline
+        \textbf{FECHA DE FINALIZACIÓN} & {{proyectEndDate}} \\
+        \hline
+        \textbf{DEADLINES ESTRICTAS} & {{proyectDeadlines}} \\
+        \hline
+        \textbf{PRINCIPALES METAS} & {{proyectMilestones}} \\
+        \hline
+    \end{tabularx}
 
-\section{Restricciones del Proyecto}
+    \vspace{2mm}
 
-\noindent
-\begin{tabularx}{\textwidth}{ X X X X X }
-\hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{FECHA DE INICIO}} &
-\wrappingmulticolumn{4}{X}{{proyectStartDate}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{FECHA DEL KICK OFF}} &
-\wrappingmulticolumn{4}{X}{{kickOffDate}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{FECHA DE FINALIZACION}} &
-\wrappingmulticolumn{4}{X}{{proyectEndDate}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{DEADLINES ESTRICTAS}} &
-\wrappingmulticolumn{4}{X}{{proyectDeadlines}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{PRINCIPALES METAS}} &
-\wrappingmulticolumn{4}{X}{{proyectMilestones}} \\ \hline\hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!20}\textbf{RESTRICCIONES DE PRESUPUESTO}} &
-\wrappingmulticolumn{4}{X}{{budgetRestrictions}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!20}\textbf{RESTRICCIONES DE CALIDAD O RENDIMIENTO}} &
-\wrappingmulticolumn{4}{X}{{qualityRestrictions}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!20}\textbf{RESTRICCIONES DE EQUIPO O PERSONAL}} &
-\wrappingmulticolumn{4}{X}{{teamRestrictions}} \\ \hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!20}\textbf{RESTRICCIONES JURIDICAS O REGULATORIAS}} &
-\wrappingmulticolumn{4}{X}{{juridicalRestrictions}} \\ \hline
-\end{tabularx}
+    \noindent
+    \begin{tabularx}{\textwidth}{|>{\columncolor{gray!20}}L|R|}
+        \hline
+        \textbf{RESTRICCIONES DE PRESUPUESTO} & {{budgetRestrictions}} \\
+        \hline
+        \textbf{RESTRICCIONES DE CALIDAD O RENDIMIENTO} & {{qualityRestrictions}} \\
+        \hline
+        \textbf{RESTRICCIONES DE EQUIPO O PERSONAL} & {{teamRestrictions}} \\
+        \hline
+        \textbf{RESTRICCIONES JURÍDICAS O REGULATORIAS} & {{juridicalRestrictions}} \\
+        \hline
+    \end{tabularx}
 
-\section{Estimaciones de plazo}
-\noindent
-\begin{tabularx}{\textwidth}{ X X X X X X }
-\hline
-\wrappingmulticolumn{1}{X}{\centering\cellcolor{gray!40}\textbf{HORAS ESTIMADAS PARA LA REALIZACION DEL PROYECTO}} &
-\wrappingmulticolumn{5}{X}{{timeEstimate}} \\ \hline
-\end{tabularx}
+    \section{Estimaciones de plazo}
+    \noindent
+    \begin{tabularx}{\textwidth}{|>{\columncolor{gray!40}}L|R|}
+        \hline
+        \textbf{HORAS ESTIMADAS PARA LA REALIZACIÓN DEL PROYECTO} & {{timeEstimate}} \\
+        \hline
+    \end{tabularx}
 
-\section{Verificacion}
-{{approvals}}
-
+    \section{Verificación}
+    {{approvals}}
 
 \end{document}
