Finish Create EDT document

--- a/gestionproyectos/src/main/resources/templates/Línea base del alcance.tex
+++ b/gestionproyectos/src/main/resources/templates/Línea base del alcance.tex
@@ -105,4 +105,11 @@
         }
     \end{center}
 
+
+    \subsection{Descripción de las Tareas}
+    \begin{description}
+        {{taskDescriptions}}
+    \end{description}
+
+
 \end{document}
