--- a/gestionproyectos/src/main/resources/templates/acta_de_constitucion.tex
+++ b/gestionproyectos/src/main/resources/templates/acta_de_constitucion.tex
@@ -27,7 +27,7 @@
     \newpage
 
     \section{Propósito del Proyecto}
-    {{proyectPurpouse}}
+    {{proyectPurpose}}
 
     \section{Descripción de alto nivel del Proyecto}
     {{proyectDescription}}
