Vista preeliminar Desempeño de trabajo Related to #113

--- a/gestionproyectos/src/main/resources/templates/revision_desempeno_de_trabajo.tex
+++ b/gestionproyectos/src/main/resources/templates/revision_desempeno_de_trabajo.tex
@@ -15,7 +15,7 @@
 \begin{document}
 
     \begin{center}
-    {\huge\textbf{Revision de Desempeño de Trabajo}}\\[1cm]
+    {\huge\textbf{Revisión de Desempeño de Trabajo}}\\[1cm]
     \end{center}
 
     \renewcommand{\arraystretch}{1.5}
@@ -24,7 +24,7 @@
     \noindent
     \begin{tabularx}{\textwidth}{|c|c|c|c|c|c|}
         \hline
-        \multicolumn{6}{|>{\columncolor{gray!50}}p{18.12cm}|}{\centering\textbf{INFORMACION DEL EMPLEADO}} \\ \hline
+        \multicolumn{6}{|>{\columncolor{gray!50}}p{18.12cm}|}{\centering\textbf{INFORMACIÓN DEL EMPLEADO}} \\ \hline
         \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{NOMBRE DEL EMPLEADO}} &
         \multicolumn{2}{p{5.5cm}|}{\textbf{{{employeeName}}}} &
         \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{DEPART- AMENTO}} &
@@ -33,11 +33,11 @@
         \multicolumn{2}{p{5.5cm}|}{\textbf{{{idEmployee}}}} &
         \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{NOMBRE REVISOR}} &
         \multicolumn{2}{p{5.5cm}|}{\textbf{{{reviewerName}}}} \\ \hline
-        \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{POSICION EMPLEADO}} &
+        \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{POSICIÓN EMPLEADO}} &
         \multicolumn{2}{p{5.5cm}|}{\textbf{{{employeePosition}}}} &
-        \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{TITULO DEL REVISOR}} &
+        \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{TÍTULO DEL REVISOR}} &
         \multicolumn{2}{p{5.5cm}|}{\textbf{{{reviewerTitle}}}} \\ \hline
-        \multicolumn{2}{|>{\columncolor{gray!20}}p{5.5cm}|}{\textbf{FECHA DE ULTIMA REVISION}} &
+        \multicolumn{2}{|>{\columncolor{gray!20}}p{5.5cm}|}{\textbf{FECHA DE ÚLTIMA REVISIÓN}} &
         \multicolumn{1}{p{2.9cm}|}{\textbf{{{lastReviewDate}}}} &
         \multicolumn{2}{|>{\columncolor{gray!20}}p{5.5cm}|}{\textbf{FECHA ACTUAL}} &
         \multicolumn{1}{p{2.9cm}|}{\textbf{{{currentDate}}}} \\ \hline
@@ -45,7 +45,7 @@
 
     \vspace{0.5cm}
 
-    \section{Evaluacion de Caracteristicas del Empleado}
+    \section{Evaluación de Características del Empleado}
     {{employeeCharacteristicsEvaluations}}
 
     \section{Metas}
@@ -53,17 +53,17 @@
     \begin{tabularx}{\textwidth}{|c|c|c|c|c|c|}
         \hline
         \multicolumn{6}{|>{\columncolor{gray!50}}p{18.12cm}|}{\centering\textbf{METAS}} \\ \hline
-        \multicolumn{6}{|>{\columncolor{gray!20}}p{18.12cm}|}{\centering\textbf{¿FUERON LAS METAS ALCANZADAS EN LA ACTUAL REVISION?}} \\ \hline
+        \multicolumn{6}{|>{\columncolor{gray!20}}p{18.12cm}|}{\centering\textbf{¿FUERON LAS METAS ALCANZADAS EN LA ACTUAL REVISIÓN?}} \\ \hline
         \multicolumn{6}{|p{18.12cm}|}{\centering\textbf{{{currentGoalsReview}}}} \\ \hline
-        \multicolumn{6}{|>{\columncolor{gray!20}}p{18.12cm}|}{\centering\textbf{METAS PARA SIGUIENTE REVISION}} \\ \hline
+        \multicolumn{6}{|>{\columncolor{gray!20}}p{18.12cm}|}{\centering\textbf{METAS PARA SIGUIENTE REVISIÓN}} \\ \hline
         \multicolumn{6}{|p{18.12cm}|}{\centering\textbf{{{futureGoals}}}} \\ \hline
     \end{tabularx}
 
-    \section{Comentarios y Aprovacion}
+    \section{Comentarios y Aprobación}
     \noindent
     \begin{tabularx}{\textwidth}{|c|c|c|c|c|c|}
         \hline
-        \multicolumn{6}{|>{\columncolor{gray!50}}p{18.12cm}|}{\centering\textbf{COMENTARIOS Y APROVACION}} \\ \hline
+        \multicolumn{6}{|>{\columncolor{gray!50}}p{18.12cm}|}{\centering\textbf{COMENTARIOS Y APROBACIÓN}} \\ \hline
         \multicolumn{6}{|>{\columncolor{gray!20}}p{18.12cm}|}{\centering\textbf{COMENTARIOS}} \\ \hline
         \multicolumn{6}{|p{18.12cm}|}{\centering\textbf{{{comments}}}} \\ \hline
         \multicolumn{1}{|>{\columncolor{gray!20}}p{2.91cm}|}{\textbf{FIRMA EMPLEADO}} &
