--- a/gestionproyectos/src/main/resources/templates/plan_de_gestion_del_alcance.tex
+++ b/gestionproyectos/src/main/resources/templates/plan_de_gestion_del_alcance.tex
@@ -34,6 +34,9 @@
 
     \section{Introducción}
     {{introduction}}
+
+    \section{Enfoque de Gestión del Alcance}
+    {{scopeManagementApproach}}
     
     \section{Roles y Responsabilidades}
     {{rolesAndResponsibilities}}
